--- a/index.html
+++ b/index.html
@@ -26,5 +26,30 @@
         “It’s the first time that Mediterranean countries have come together to address such an incredible common threat 
         and that’s hugely significant,” says the Greek capital’s chief heat officer, Eleni Myrivili, of the initiative.
     </p>
+    <p>
+        “Until now we’ve been toddlers in our response to building climate resilience through transnational collaboration,”
+        she said. “What has just been agreed, in both breadth and depth, is a gamechanger.”
+    </p>
+    <p>
+        At no other time has the spectre of climate catastrophe seemed as real across a region that in recent months has been 
+        forced to deal with forest fires from the Spanish region of Andalucía to the southern reaches of Turkey. The leaders of 
+        nine southern EU countries accepted that urgent and ambitious global action was now needed to create “a safe, secure, prosperous, 
+        fair and sustainable future”. Collaboration at all levels – national, regional and local, boosted by civil society and the 
+        private sector – was required, they said.
+    </p>
+    <p>
+        “The devastating wildfires of the summer had tragic consequences for Mediterranean countries … the climate crisis is no 
+        longer a distant threat; it has landed firmly on our shores,” the prime minister, Kyriakos Mitsotakis, told counterparts 
+        assembled in the Greek capital.
+    </p>
+    <p>
+        “As the danger presented by this crisis is common to all of us, so must our defences be.”
+    </p>
+    <figure>
+        <img src="C:\Users\PC\Desktop\Porblematica1\Image2.jpg">
+        <figcaption>The Greek prime minister, Kyriakos Mitsotakis (left), speaks with the French president, Emmanuel Macron (centre), 
+            and Malta’s prime minister, Robert Abela, on the sidelines of a summit in Athens. Photograph: Eurokinissi/Rex/Shutterstock</figcaption>
+    
+    </figure>
 </body>
 </html>
