--- a/index.html
+++ b/index.html
@@ -49,7 +49,44 @@
         <img src="C:\Users\PC\Desktop\Porblematica1\Image2.jpg">
         <figcaption>The Greek prime minister, Kyriakos Mitsotakis (left), speaks with the French president, Emmanuel Macron (centre), 
             and Malta’s prime minister, Robert Abela, on the sidelines of a summit in Athens. Photograph: Eurokinissi/Rex/Shutterstock</figcaption>
-    
     </figure>
+    <p>
+        Signed late on Friday at a summit attended by the heads of France, Spain, Italy, Portugal, Cyprus, Malta, Slovenia and Croatia, 
+        the Athens Declaration contains pledges in key areas of the climate crisis.
+    </p>
+    <p>
+        Biodiversity, forest management, the marine environment and civil protection, prevention and preparedness were singled out by 
+        participants who also called for closer integration of climate-change policies across Europe and further cooperation within 
+        the EU’s transnational disaster response mechanism. Experts and technologies critical for ecosystem recovery should be exchanged, 
+        they said, given the longer, more frequent and intense heatwaves, droughts, floods and forest fires the region was facing.
+    </p>
+    <p>
+        The European Commission president, Ursula von der Leyen, who was also present, called the climate initiative 
+        “the right move at the right time”. “We all see that climate change is heavily affecting the Mediterranean region,” she said.
+         “And we need to find solutions and we can offer solutions.”
+    </p>
+    <p>
+        Athens is by far the hottest metropolis in mainland Europe, with predictions it could become the continent’s first uninhabitable 
+        capital city if temperatures keep rising.
+    </p>
+    <p>
+        Mitsotakis’s centre-right government endured fierce criticism for its handling of fires that erupted as record heatwaves transformed 
+        bone-dry terrain into what the leader described as a “powder keg”. The mercury hit an unprecedented 47.1C (116.8F) with temperatures 
+        exceeding 42C for several days in July and August forcing mass evacuations as thousands of hectares of virgin forest and farmland 
+        were consumed by flames.
+    </p>
+    <p>
+        On Athens’ northern outskirts, the island of Evia and the southern Peloponnese, homes were razed and animals killed in infernos 
+        fanned by gale-force winds that raged for days. With his administration put on the defensive, the Greek prime minister has sought 
+        to place the climate crisis at the centre of his agenda, appointing a minister, Christos Stylianides, who will deal exclusively 
+        with the climate crisis while assuming a pioneering role in galvanising regional support to confront the problem.
+    </p>
+    <p>
+        But Myrivili – Europe’s first urban heat officer, tasked with addressing the scorching heat that cities such as the Greek capital 
+        are expected to experience in the coming years – said the manifesto’s absence of any mention of the role of cities in fighting 
+        climate breakdown was a “shocking” oversight. She argued the absence of cities from the declaration “betrays the lack of 
+        coordination that still exists between national government policies and municipal policies regarding climate change. 
+        Urban centres and their communities are an integral part of any solution.”
+    </p>
 </body>
 </html>
