Add missing links and svg

--- a/index.html
+++ b/index.html
@@ -1,92 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Problematica</title>
+    <link rel="stylesheet" href="Styles/styles.css">
 </head>
+
 <body>
-    <h1>Climate crisis on our shores: Mediterranean countries sign deal after summer of fires</h1>
+    <a class="topic-link" href="https://www.theguardian.com/world/extreme-weather" data-component="section"
+        data-link-name="article section">
+        <span>Extreme weather</span>
+    </a>
+    <h1>‘Climate crisis on our shores’: Mediterranean countries sign deal after summer of fires</h1>
     <h2>Region´s leaders make joint declatarion vowing to step up efforts to adress extreme weather</h2>
     <figure>
-        <img src="C:\Users\PC\Desktop\Porblematica1\Image1.jpg">
-        <figcaption>A firefigther battles wildfire near Athens in August. Pothograph: Maria Cohoudari/NurPhoto/Rex/Shutterstock</figcaption>
+        <img src="Image1.jpg">
+        <figcaption>
+            <svg width="11" height="10" viewBox="0 0 11 10">
+                <path fill="red" fill-rule="evenodd" d="M5.5 0L11 10H0z"></path>
+            </svg> A firefigther battles wildfire near Athens in August. Pothograph: Maria
+            Cohoudari/NurPhoto/Rex/Shutterstock
+        </figcaption>
     </figure>
+    <div class="Para">
+        <p>
+            With the catastrophic effects of this summer’s unprecedented wildfires still being counted, leaders from
+            around
+            the Mediterranean – the European region most at risk from climate breakdown – have vowed to intensify their
+            efforts to tackle
+            the challenges posed by extreme weather.
+        </p>
+    </div>
     <p>
-        With the catastrophic effects of this summer’s unprecedented wildfires still being counted, leaders from around 
-        the Mediterranean – the European region most at risk from climate breakdown – have vowed to intensify their efforts to tackle 
-        the challenges posed by extreme weather.
-    </p>
-    <p>
-        A joint declaration, signed in Athens, has fired the starting shot on what is hoped will bring groundbreaking 
+        A joint declaration, signed in Athens, has fired the starting shot on what is hoped will bring groundbreaking
         change in how the neighbouring states shore up their defences against natural disasters.
     </p>
     <p>
-        “It’s the first time that Mediterranean countries have come together to address such an incredible common threat 
-        and that’s hugely significant,” says the Greek capital’s chief heat officer, Eleni Myrivili, of the initiative.
+        “It’s the first time that Mediterranean countries have come together to address such an incredible common threat
+        and that’s hugely significant,” says the Greek capital’s <a class="inline-link"
+            href="https://www.theguardian.com/world/2021/may/10/heat-athens-climate-crisis-mayor"
+            data-link-name="in body link">chief heat officer</a>, Eleni Myrivili, of the initiative.
     </p>
     <p>
-        “Until now we’ve been toddlers in our response to building climate resilience through transnational collaboration,”
+        “Until now we’ve been toddlers in our response to building climate resilience through transnational
+        collaboration,”
         she said. “What has just been agreed, in both breadth and depth, is a gamechanger.”
     </p>
     <p>
-        At no other time has the spectre of climate catastrophe seemed as real across a region that in recent months has been 
-        forced to deal with forest fires from the Spanish region of Andalucía to the southern reaches of Turkey. The leaders of 
-        nine southern EU countries accepted that urgent and ambitious global action was now needed to create “a safe, secure, prosperous, 
-        fair and sustainable future”. Collaboration at all levels – national, regional and local, boosted by civil society and the 
+        At no other time has the spectre of climate catastrophe seemed as real across a region that in recent months has
+        been
+        forced to deal with forest fires from the <a class="inline-link"
+            href="https://www.theguardian.com/world/2021/sep/13/spain-wildfire-emergency-workers-fighting-blaze-andalucia"
+            data-link-name="in body link">Spanish region of Andalucía</a> to the southern reaches of Turkey. The
+        leaders of
+        nine southern EU countries accepted that urgent and ambitious global action was now needed to create “a safe,
+        secure, prosperous,
+        fair and sustainable future”. Collaboration at all levels – national, regional and local, boosted by civil
+        society and the
         private sector – was required, they said.
     </p>
     <p>
-        “The devastating wildfires of the summer had tragic consequences for Mediterranean countries … the climate crisis is no 
-        longer a distant threat; it has landed firmly on our shores,” the prime minister, Kyriakos Mitsotakis, told counterparts 
+        “The devastating wildfires of the summer had tragic consequences for Mediterranean countries … the climate
+        crisis is no
+        longer a distant threat; it has landed firmly on our shores,” the prime minister, Kyriakos Mitsotakis, told
+        counterparts
         assembled in the Greek capital.
     </p>
     <p>
         “As the danger presented by this crisis is common to all of us, so must our defences be.”
     </p>
     <figure>
-        <img src="C:\Users\PC\Desktop\Porblematica1\Image2.jpg">
-        <figcaption>The Greek prime minister, Kyriakos Mitsotakis (left), speaks with the French president, Emmanuel Macron (centre), 
-            and Malta’s prime minister, Robert Abela, on the sidelines of a summit in Athens. Photograph: Eurokinissi/Rex/Shutterstock</figcaption>
+        <img src="Image2.jpg">
+        <figcaption>
+            <svg width="11" height="10" viewBox="0 0 11 10">
+                <path fill="red" fill-rule="evenodd" d="M5.5 0L11 10H0z"></path>
+            </svg> The Greek prime minister, Kyriakos Mitsotakis (left), speaks with the French president, Emmanuel
+            Macron (centre),
+            and Malta’s prime minister, Robert Abela, on the sidelines of a summit in Athens. Photograph:
+            Eurokinissi/Rex/Shutterstock
+        </figcaption>
     </figure>
     <p>
-        Signed late on Friday at a summit attended by the heads of France, Spain, Italy, Portugal, Cyprus, Malta, Slovenia and Croatia, 
+        Signed late on Friday at a summit attended by the heads of France, Spain, Italy, Portugal, <a
+            class="inline-link" href="https://www.theguardian.com/world/cyprus" data-component="auto-linked-tag"
+            data-link-name="in body link">Cyprus</a>, Malta,
+        Slovenia and Croatia,
         the Athens Declaration contains pledges in key areas of the climate crisis.
     </p>
     <p>
-        Biodiversity, forest management, the marine environment and civil protection, prevention and preparedness were singled out by 
-        participants who also called for closer integration of climate-change policies across Europe and further cooperation within 
-        the EU’s transnational disaster response mechanism. Experts and technologies critical for ecosystem recovery should be exchanged, 
-        they said, given the longer, more frequent and intense heatwaves, droughts, floods and forest fires the region was facing.
+        Biodiversity, forest management, the marine environment and civil protection, prevention and preparedness were
+        singled out by
+        participants who also called for closer integration of climate-change policies across Europe and further
+        cooperation within
+        the EU’s transnational disaster response mechanism. Experts and technologies critical for ecosystem recovery
+        should be exchanged,
+        they said, given the longer, more frequent and intense heatwaves, droughts, floods and forest fires the region
+        was facing.
     </p>
     <p>
-        The European Commission president, Ursula von der Leyen, who was also present, called the climate initiative 
-        “the right move at the right time”. “We all see that climate change is heavily affecting the Mediterranean region,” she said.
-         “And we need to find solutions and we can offer solutions.”
+        The European Commission president, Ursula von der Leyen, who was also present, called the climate initiative
+        “the right move at the right time”. “We all see that climate change is heavily affecting the Mediterranean
+        region,” she said.
+        “And we need to find solutions and we can offer solutions.”
     </p>
     <p>
-        Athens is by far the hottest metropolis in mainland Europe, with predictions it could become the continent’s first uninhabitable 
+        Athens is by far the hottest metropolis in mainland Europe, with predictions it could become the continent’s
+        first uninhabitable
         capital city if temperatures keep rising.
     </p>
     <p>
-        Mitsotakis’s centre-right government endured fierce criticism for its handling of fires that erupted as record heatwaves transformed 
-        bone-dry terrain into what the leader described as a “powder keg”. The mercury hit an unprecedented 47.1C (116.8F) with temperatures 
-        exceeding 42C for several days in July and August forcing mass evacuations as thousands of hectares of virgin forest and farmland 
+        Mitsotakis’s centre-right government endured fierce criticism for its handling of fires that erupted as record
+        heatwaves transformed
+        bone-dry terrain into what the leader described as a “powder keg”. The mercury hit an unprecedented 47.1C
+        (116.8F) with temperatures
+        exceeding 42C for several days in July and August forcing mass evacuations as thousands of hectares of virgin
+        forest and farmland
         were consumed by flames.
     </p>
     <p>
-        On Athens’ northern outskirts, the island of Evia and the southern Peloponnese, homes were razed and animals killed in infernos 
-        fanned by gale-force winds that raged for days. With his administration put on the defensive, the Greek prime minister has sought 
-        to place the climate crisis at the centre of his agenda, appointing a minister, Christos Stylianides, who will deal exclusively 
-        with the climate crisis while assuming a pioneering role in galvanising regional support to confront the problem.
+        On Athens’ northern outskirts, the island of Evia and the southern Peloponnese, <a class="inline-link"
+            href="https://www.theguardian.com/world/2021/aug/07/apocalyptic-scenes-hit-greece-as-athens-besieged-by-fire"
+            data-link-name="in body link">homes were razed and animals killed in infernos fanned by gale-force winds
+            that raged for days</a>. With his administration put on the defensive, the Greek prime
+        minister has sought
+        to place the climate crisis at the centre of his agenda, appointing a minister, Christos Stylianides, who will
+        deal exclusively
+        with the climate crisis while assuming a pioneering role in galvanising regional support to confront the
+        problem.
     </p>
     <p>
-        But Myrivili – Europe’s first urban heat officer, tasked with addressing the scorching heat that cities such as the Greek capital 
-        are expected to experience in the coming years – said the manifesto’s absence of any mention of the role of cities in fighting 
-        climate breakdown was a “shocking” oversight. She argued the absence of cities from the declaration “betrays the lack of 
-        coordination that still exists between national government policies and municipal policies regarding climate change. 
+        But Myrivili – Europe’s first urban heat officer, tasked with addressing the scorching heat that cities such as
+        the Greek capital
+        are expected to experience in the coming years – said the manifesto’s absence of any mention of the role of
+        cities in fighting
+        climate breakdown was a “shocking” oversight. She argued the absence of cities from the declaration “betrays the
+        lack of
+        coordination that still exists between national government policies and municipal policies regarding climate
+        change.
         Urban centres and their communities are an integral part of any solution.”
     </p>
 </body>
+
 </html>
